# embedding-tuning

./: README.md  pyproject.toml  requirements.txt
src/embedding_tuning/: __init__.py  eval.py  extract_embedding.py  model_registry.py  prepare_data.py  train.py  utils.py
src/embedding_tuning/datasets/: cropped_coco.py  tensor_dataset.py
src/embedding_tuning/models/: angular_margin.py  zero_shot_classifier.py
